--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "start": "NODE_PATH=./src react-scripts start",
-    "build": "react-scripts build",
+    "build": "sh -ac '. .env.${REACT_APP_ENV}; react-scripts build'",
+    "build:staging": "REACT_APP_ENV=staging yarn run build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "menlo:deploy": "yarn run shipit staging deploy",
