Move the truffle artifacts to /src/contracts for production builds.

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "scripts": {
     "start": "NODE_PATH=./src react-scripts start",
-    "build": "sh -ac '. .env.${REACT_APP_ENV}; react-scripts build'",
+    "build": "NODE_PATH=./src sh -ac '. .env.${REACT_APP_ENV}; react-scripts build'",
     "build:staging": "REACT_APP_ENV=staging yarn run build",
-    "test": "react-scripts test --env=jsdom",
+    "build:production": "REACT_APP_ENV=production yarn run build",
+    "test": "NODE_PATH=./src react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "menlo:deploy": "yarn run shipit staging deploy",
     "menlo:create-integration-accounts": "node scripts/create-accounts.js",
