--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "buffer": "^5.1.0",
     "cids": "^0.5.3",
     "ipfs": "^0.28.2",
-    "ipfs-api": "^18.1.1",
+    "ipfs-api": "^20.0.1",
     "multihashing": "^0.3.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
+    "react-scripts": "2.0.0-next.b2fd8db8",
     "through2": "^2.0.3",
     "truffle-contract": "^3.0.4",
     "web3": "^1.0.0-beta.33"
@@ -31,9 +31,21 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "dotenv": "^5.0.1",
     "shipit-cli": "^4.0.2",
     "shipit-deploy": "^4.0.2",
-    "truffle": "^4.1.5"
+    "truffle": "^4.1.7"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">1%",
+      "last 4 versions",
+      "Firefox ESR",
+      "not ie < 11"
+    ]
   }
 }
